gcc/testsuite/gm2/iso/const/pass/constcast.mod
MODULE constcast ;

FROM SYSTEM IMPORT CAST ;

CONST Nil = CAST (PROC, NIL) ;

BEGIN
END constcast.