gcc/testsuite/gm2/iso/const/fail/testre.mod
MODULE testre ;

CONST
   foo = RE (cmplx) ;

VAR
   cmplx: COMPLEX ;
BEGIN

END testre.
